Updating camera search + UI fixups
- find_cameras.py -> finding_cameras.py
- condensing the above to a single function with urls coming in from
  url_strings.py
- adding nmap ping scan to prevent need for sudo/root
- updating startup.sh with new folders
- UI now includes auth and manufacturer fields
- UI now slightly misaligned, unfortunate but known bug

--- a/ui/static/styles/main.css
+++ b/ui/static/styles/main.css
@@ -52,6 +52,7 @@ h1 {
   padding: 5px;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   border: none;
   border-radius: 1px;
@@ -142,6 +143,11 @@ h1 {
   font-size: large;
   /* text-transform: uppercase; */
   padding: 0;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
 
 input[type="file"],
